--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
 	<packaging>jar</packaging>
 
 	<name>priceart-web-service</name>
-	<description>Micro Servizio priceart-web-service </description>
+	<description>Microservice Gestione Prezzi</description>
 
 	<parent>
 		<groupId>org.springframework.boot</groupId>
@@ -68,6 +68,13 @@
 			<artifactId>springfox-swagger-ui</artifactId>
 			<version>2.9.2</version>
 		</dependency>
+
+			<!-- CACHE -->
+		<dependency>
+      		<groupId>org.springframework.boot</groupId>
+      		<artifactId>spring-boot-starter-cache</artifactId>
+    	</dependency>
+		
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
